<resources>
    <string name="app_name">Callisto</string>
    <string name="version_name">0.81 "Protostar"</string>
    <string name="jbtitle">JBTitle</string>
    <string name="stop">Stop</string>
    <string name="live">Live</string>
    <string name="of">of</string>
    <string name="clear">Clear</string>
    <string name="download">Download</string>
    <string name="downloads">Downloads</string>
    <string name="beginning_download">Beginning download</string>
    <string name="downloading">Downloading</string>
    <string name="loading_msg">Please be patient. Cook some bacon or something.</string>
    <string name="quit">Quit</string>
    <string name="more">More</string>
    <string name="play">Play</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="resume">Resume</string>
    <string name="refresh">Refresh</string>
    <string name="reload">Reload</string>
    <string name="loading">Loading&#8230;</string>
    <string name="list_empty">List is empty</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_clear">This will clear all your play statuses and saved positions. Are you sure?</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="widget_text">(Press to enqueue episodes)</string>
    <string name="queue">Queue</string>
    <string name="queue_size">Queue size</string>
    <string name="queue_error">There was an error loading the next song. It has been removed from the queue.</string>
    <string name="seek_title">Seek to position</string>
    <string name="playlist_empty">Playlist is empty</string>
    <string name="active">Active</string>
    <string name="complete">Complete</string>
    <string name="pause">Pause</string>
    <string name="clear_completed">Clear Completed</string>
    <string name="cancel_active">Cancel Active</string>
    <string name="donate">Donate</string>
    <string name="choose_amount">Choose amount (USD)</string>
    <string name="custom">Custom</string>
    <string name="msg_to_jb">Message to Jupiter Broadcasting</string>
    <string name="donate_note">
        100% of your donation will go <i>directly</i> to Jupiter Broadcasting. Afterwards, if you \
        want to donate to the app developer, buy the <a href="market://details?id=com.qweex.donation">donation app in the market</a>.
    </string>
    <string name="amount_not_valid">The amount you entered is not a valid number, you silly goose.</string>
    <string name="payment_success">Payment was successful! Thanks so much for supporting JupiterBroadcasting!</string>
    <string name="payment_failed">Payment was unsuccessful! Sorry, try the main website.</string>
    <string name="no_sd_card">No SD Card</string>
    <string name="no_external_storage">There is currently no external storage to write to.</string>
    <string name="folder_not_exist">The storage directory does not exist, check its correctness in the preferences.</string>
    <string name="file_written_to">File written to:</string>
    <string name="unable_to_write_to">Unable to write to:</string>
    <string name="verizon_warning">
        It has been reported that your carrier actively blocks all IRC traffic, so wifi is recommended. \
        \n\nOtherwise, unexpected behaviour may result, abandon all hope, ye who enter here.
    </string>
    <string name="carrier_warning">Carrier Warning</string>
    <string name="song_error">There was an error loading this song. Will it make you feel better if I flatter you, beautiful?</string>
    <string name="update_error">There was an error loading the feed. Either try again later, or denounce technology and become a monk.</string>
    <string name="video_warning">Video support is VERY untested. Please do not 1-star the app if it is wonky. If you do I will personally hunt you down and make you wear a sock monkey costume for a month as punishment.</string>
    <string name="move_folder_error">An error occurred while trying to rename the folder. You might have to do it manually.</string>
    <string name="live_error">An error occurred. This may be a one time thing, or your device does not support the stream. You can try going to JBlive.info to see if it\'s just this app.</string>
    <string name="live_error_title">By the beard of Zeus!</string>
    <string name="share">Share</string>
    <string name="share_subject">Thought I\'d share this with you!</string>
    <string name="share_message" formatted="false">Check out this awesome episode of %s!\n\n%s</string>
    <string name="enqueued">Enqueued</string>
    <string name="stream">Stream</string>
    <string name="file_size">Size:</string>
    <string name="refresh_all">Refresh All</string>
    <string name="no_results">No results found.</string>
    <string name="mark">Mark</string>
    <string name="mark_all">Mark all as</string>
    <string name="old">Old</string>
    <string name="new_">New</string>
    <string name="filter">Filter</string>
    <string name="unfilter">Unfilter</string>
    <string name="search">Search Episodes</string>
    <string name="show_update_error">An error occurred updating the show</string>
    <string name="beginning_update">Beginning update. Please attempt to lick your elbow for the next 10 seconds.</string>
    <string name="finished_update">Finished update!</string>
    <string name="today">Today</string>
    <string name="fetch">Fetch Calendar</string>
    <string name="upcoming_shows">Upcoming Shows</string>
    <string name="alarm_title">JupiterBroadcasting alarm!</string>
    <string name="now">Now</string>
    <string name="time_left">%s left</string>
    <string name="creating_event">Creating event...</string>
    <string name="set_alarm_notification">Set Alarm/Notification</string>
    <string name="soon">Soon</string>
    <string name="switch_to_live">Switch from playlist to live?</string>
    <string name="no_events">No events found for this week. Try "Load More".</string>
    <string name="show">Show</string>
    <string name="type">Type</string>
    <string name="notification">Notification</string>
    <string name="alarm">Alarm</string>
    <string name="vibrate">Vibrate</string>
    <string name="save">Save</string>
    <string name="no_alarm_set">No Alarm Set</string>
    <string name="edit">Edit</string>
    <string name="calendar_fetch_error" formatted="false">%s occurred. Maybe your connection might be flaky?</string>
    <string name="is_on_right_now" formatted="false">%s is on right now!</string>
    <string name="is_on_in_minutes" formatted="false">%s is in %s minutes",</string>
    <string name="ringtone_prompt">Choose alarm tone</string>
    <string-array name="months">
        <item >January</item>
        <item >February</item>
        <item >March</item>
        <item >April</item>
        <item >May</item>
        <item >June</item>
        <item >July</item>
        <item >August</item>
        <item >September</item>
        <item >October</item>
        <item >November</item>
        <item >December</item>
    </string-array>
    <string-array name="days">
        <item >Sun</item>
        <item >Mon</item>
        <item >Tue</item>
        <item >Wed</item>
        <item >Thu</item>
        <item >Fri</item>
        <item >Sat</item>
    </string-array>
    <string name="day1">Sun</string>
    <string name="day2">Mon</string>
    <string name="day3">Tue</string>
    <string name="day4">Wed</string>
    <string name="day5">Thu</string>
    <string name="day6">Fri</string>
    <string name="day7">Sat</string>
    <string name="contact">Contact</string>
    <string name="save_draft">Save Draft</string>
    <string name="contact_form_error">Error Loading Form</string>
    <string name="contact_form_message">The page fetched does not seem to be the valid contact form. It might be your connection, or the end of the world</string>
    <string name="message_saved_as_draft">Message saved as draft.</string>
    <string-array name="tablet_menu">
        <item>Play</item>
        <item>Live</item>
        <item>Plan</item>
        <item>Chat</item>
        <item>Contact</item>
        <item>Donate</item>
    </string-array>
    <string name="release_notes">Release Notes</string>
    <string name="settings">Settings</string>
    <string name="plan">Plan</string>
    <string name="chat">Chat</string>
    <string name="folder_moved">Moved, pray to the gods it has worked</string>
    <string name="press_color_to_apply">Press Color To Apply</string>
    <string name="reset_colors_title">Dude wait</string>
    <string name="reset_colors_message">Are you sure you want to reset the IRC colors to their default values?</string>
    <string name="storage_path">Storage path</string>
    <string name="live_audio_quality">Live audio quality</string>
    <string name="live_video_source">Live video source</string>
    <string name="hide_notification_when_paused">Hide notification when paused</string>
    <string name="delete_upon_completion">Delete upon completion</string>
    <string name="append_downloads_to_queue">Append downloads to queue</string>
    <string name="skip_inactive">\'Update All\' skips inactive</string>
    <string name="pause_on_unplug">Pause on unplug</string>
    <string name="pause_on_unplug_desc">Pause playback when headphone jack is unplugged</string>
    <string name="play_on_replug">Play on re-plug</string>
    <string name="play_on_replug_desc">Resume playback when headphone jack is plugged back in</string>
    <string name="tablet_screen">New (tablet) main screen</string>
    <string name="auto_save_contact_draft">Auto-save Contact Draft</string>
    <string name="custom_feeds">Custom Feeds</string>
    <string name="title">Title</string>
    <string name="rss_url">RSS URL</string>
    <string name="port">Port</string>
    <string name="port_default">Default is 6667</string>
    <string name="nickname">Nickname</string>
    <string name="nickname_desc">Your nickname!</string>
    <string name="password">Password</string>
    <string name="password_desc">Optional - If your nick is registered with NickServ</string>
    <string name="quit_msg">Quit msg</string>
    <string name="quit_msg_desc">Optional - Message to be shown when you leave</string>
    <string name="show_timestamps">Show Timestamps</string>
    <string name="show_modes">Show modes</string>
    <string name="show_modes_desc">Prepends symbols for OPs and such</string>
    <string name="max_scrollback">Max scrollback</string>
    <string name="max_scrollback_desc">Maximum number of lines to display</string>
    <string name="sound_on_first">Sound on first mention</string>
    <string name="sound_on_first_desc">When you receive an unread mention.</string>
    <string name="sound_on_every">Sound on EVERY mention</string>
    <string name="sound_on_every_desc">When anyone mentions you at all</string>
    <string name="vibrate_on_first">Vibrate on first mention</string>
    <string name="vibrate_on_first_desc">When you receive an unread mention.</string>
    <string name="vibrate_on_every">Vibrate on EVERY mention</string>
    <string name="vibrate_on_every_desc">When anyone mentions you at all</string>
    <string name="use_emoticons">Use Emoticons</string>
    <string name="use_emoticons_desc">May slow performance, but is shiny</string>
    <string name="random_nick_colors">Random nick colors</string>
    <string name="random_nick_colors_desc">Generate a random color for each nick.</string>
    <string name="irc_settings">IRC Settings</string>
    <string name="text_color">Text Color</string>
    <string name="background_color">Background Color</string>
    <string name="topic_color">Topic Color</string>
    <string name="your_nick_color">Your Nick Color</string>
    <string name="me_color">/me Color</string>
    <string name="url_color">URL Color</string>
</resources>