<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2012-2013 Qweex
  ~ This file is a part of Callisto.
  ~
  ~ Callisto is free software; it is released under the
  ~ Open Software License v3.0 without warranty. The OSL is an OSI approved,
  ~ copyleft license, meaning you are free to redistribute
  ~ the source code under the terms of the OSL.
  ~
  ~ You should have received a copy of the Open Software License
  ~ along with Callisto; If not, see <http://rosenlaw.com/OSL3.0-explained.htm>
  ~ or check OSI's website at <http://opensource.org/licenses/OSL-3.0>.
  -->

<!-- This is the layout for the main Callisto activity-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/naub"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="5dp"
    android:background="@color/backClr"
    android:orientation="vertical" >

    <Button
        android:id="@+id/listen"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:layout_weight="1.0"
        android:drawablePadding="-10dp"
        android:paddingTop="10dp"
        android:text="@string/play"
        android:textColor="@android:color/primary_text_light"
        android:textSize="50sp" />

    <Button
        android:id="@+id/live"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:layout_weight="1.0"
        android:drawablePadding="-10dp"
        android:paddingTop="10dp"
        android:text="@string/live"
        android:textColor="@android:color/primary_text_light"
        android:textSize="50sp" />

    <Button
        android:id="@+id/plan"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:layout_weight="1.0"
        android:drawablePadding="-10dp"
        android:paddingTop="10dp"
        android:text="@string/plan"
        android:textColor="@android:color/primary_text_light"
        android:textSize="50sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/chat"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:layout_weight="1.0"
        android:drawablePadding="-10dp"
        android:paddingTop="10dp"
        android:text="@string/chat"
        android:textColor="@android:color/primary_text_light"
        android:textSize="50sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/contact"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:layout_weight="1.0"
        android:drawablePadding="-10dp"
        android:paddingTop="10dp"
        android:text="@string/contact"
        android:textColor="@android:color/primary_text_light"
        android:textSize="50sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/donate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:layout_weight="1.0"
        android:drawablePadding="-10dp"
        android:paddingTop="10dp"
        android:text="@string/donate"
        android:textColor="@android:color/primary_text_light"
        android:textSize="50sp"
        android:visibility="visible" />

    <include
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/controls"
        android:stretchColumns="*" />

</LinearLayout>