<!--
  ~ Copyright (C) 2012-2014 Qweex
  ~ This file is a part of Callisto.
  ~
  ~ Callisto is free software; it is released under the
  ~ Open Software License v3.0 without warranty. The OSL is an OSI approved,
  ~ copyleft license, meaning you are free to redistribute
  ~ the source code under the terms of the OSL.
  ~
  ~ You should have received a copy of the Open Software License
  ~ along with Callisto; If not, see <http://rosenlaw.com/OSL3.0-explained.htm>
  ~ or check OSI's website at <http://opensource.org/licenses/OSL-3.0>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/backClr"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/title"
            android:textColor="@color/txtClr"
            android:textSize="20dp"
            android:id="@+id/titleLabel" />
    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:id="@+id/title" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/rss_url"
            android:textColor="@color/txtClr"
            android:textSize="20dp" />
    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:id="@+id/rssurl" />

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textColor="@color/red"
            android:text="@string/delete"
            android:id="@+id/delete"/>


</LinearLayout>