<!--
  ~ Copyright (C) 2012-2014 Qweex
  ~ This file is a part of Callisto.
  ~
  ~ Callisto is free software; it is released under the
  ~ Open Software License v3.0 without warranty. The OSL is an OSI approved,
  ~ copyleft license, meaning you are free to redistribute
  ~ the source code under the terms of the OSL.
  ~
  ~ You should have received a copy of the Open Software License
  ~ along with Callisto; If not, see <http://rosenlaw.com/OSL3.0-explained.htm>
  ~ or check OSI's website at <http://opensource.org/licenses/OSL-3.0>.
  -->
 
<!-- This is the agenda form of the CalendarActivity  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainAgenda"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/backClr"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/upcoming_shows"
        android:textColor="@color/txtClr"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@color/ltgray" />

    <TextView
        android:id="@+id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/list_empty"
        android:textColor="@color/dkgray" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <LinearLayout
            android:id="@+id/agenda"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/loadmore"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/more"
        android:textColor="@color/txtClr" />

</LinearLayout>