<!--
  ~ Copyright (C) 2012-2013 Qweex
  ~ This file is a part of Callisto.
  ~
  ~ Callisto is free software; it is released under the
  ~ Open Software License v3.0 without warranty. The OSL is an OSI approved,
  ~ copyleft license, meaning you are free to redistribute
  ~ the source code under the terms of the OSL.
  ~
  ~ You should have received a copy of the Open Software License
  ~ along with Callisto; If not, see <http://rosenlaw.com/OSL3.0-explained.htm>
  ~ or check OSI's website at <http://opensource.org/licenses/OSL-3.0>.
  -->
 
<!-- This is a the weekly form for the CalendarActivity  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainCalendar"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/backClr"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/calendar_hdr"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/Bprev"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@android:color/transparent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:padding="5dp"
            android:text="&lt;&lt;"
            android:textColor="@color/calHdrClr"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/Tmonth"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="50"
            android:gravity="right|center_vertical"
            android:paddingRight="5dp"
            android:textColor="@color/calHdrClr"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/Tyear"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="50"
            android:gravity="left|center_vertical"
            android:paddingLeft="5dp"
            android:textColor="@color/calHdrClr"
            android:textSize="25dp" />

        <Button
            android:id="@+id/Bnext"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@android:color/transparent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:padding="5dp"
            android:text=">>"
            android:textColor="@color/calHdrClr"
            android:textSize="25dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/allColumns"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="3dp"
        android:paddingBottom="10dp"
        android:baselineAligned="false" >

        <LinearLayout
            android:id="@+id/LinearLayout06"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="14"
            android:orientation="vertical"
            android:paddingLeft="3dp"
            android:paddingRight="1dp"
            android:tag="col" >

            <TextView
                android:id="@+id/Tday1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/day1"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/calWeekClr" />

               <include
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                layout="@layout/calendar_day" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout05"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="14"
            android:orientation="vertical"
            android:paddingLeft="0dp"
            android:paddingRight="1dp"
            android:tag="col" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/day2"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/calWeekClr" />

               <include
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                layout="@layout/calendar_day" />  

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout04"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="14"
            android:orientation="vertical"
            android:paddingLeft="0dp"
            android:paddingRight="1dp"
            android:tag="col" >

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/day3"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/calWeekClr" />

               <include
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                layout="@layout/calendar_day" />
            
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout03"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="14"
            android:orientation="vertical"
            android:paddingLeft="0dp"
            android:paddingRight="1dp"
            android:tag="col" >

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/day4"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/calWeekClr" />

               <include
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                layout="@layout/calendar_day" />
            
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout02"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="14"
            android:orientation="vertical"
            android:paddingLeft="0dp"
            android:paddingRight="1dp"
            android:tag="col" >

            <TextView
                android:id="@+id/TextView04"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/day5"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/calWeekClr" />

               <include
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                layout="@layout/calendar_day" />
            
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout01"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="14"
            android:orientation="vertical"
            android:paddingLeft="0dp"
            android:paddingRight="1dp"
            android:tag="col" >

            <TextView
                android:id="@+id/TextView05"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/day6"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/calWeekClr" />

               <include
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                layout="@layout/calendar_day" />
            
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="14"
            android:orientation="vertical"
            android:paddingLeft="0dp"
            android:paddingRight="3dp"
            android:tag="col" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/day7"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/calWeekClr" />

               <include
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                layout="@layout/calendar_day" />
            
        </LinearLayout>
    </LinearLayout>

</LinearLayout>